# ckanext-kobo

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/kobo/: plugin.py
ckanext/kobo/assets/: script.js  webassets.yml
ckanext/kobo/tests/: test_plugin.py
