[project]
name = "ckanext-kobo"
version = "0.0.1"
description = "A CKAN extension to manage a connection with a Kobo Toolbox instance"
readme = "README.md"
authors = [
    {name = "OKFN UNHCR NRC", email = "info@okfn.org"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "kobo", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/okfn/ckanext-kobo"

[project.entry-points."ckan.plugins"]
kobo = "ckanext.kobo.plugin:KoboPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
